<android.support.v7.widget.CardView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:elevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="105dp"
            android:id="@+id/ivMain"
            android:layout_marginLeft="11dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp" android:contentDescription="TODO"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSubject"
            android:text="@string/timetable"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/ivMain"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription"
            android:layout_marginLeft="6dp"
            android:text="@string/description"
            android:layout_below="@+id/tvSubject"
            android:layout_toRightOf="@+id/ivMain"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvClick"
            android:textSize="12sp"
            android:text="@string/click_here"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/tvDescription"
            android:layout_alignBottom="@+id/ivMain"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>