<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="5dp"
    card_view:contentPadding="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardMaxElevation="5dp"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ECEFF1"
        android:padding="10dp">

        <com.example.dell.collegebuddy.Utils.LetterImageView
            android:id="@+id/ivLetterFirebase"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />


        <TextView
            android:id="@+id/tvSubjectFirebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/fullsubjectFirebase"
            android:text="@string/Subject_name"
            android:textSize="29sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullsubjectFirebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivLetterFirebase"
            android:layout_marginStart="27dp"
            android:layout_toEndOf="@+id/ivLetterFirebase"
            android:text="@string/sttime"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/endtimeFirebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/fullsubjectFirebase"
            android:layout_alignBottom="@+id/fullsubjectFirebase"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/fullsubjectFirebase"
            android:text="@string/endtime"
            android:textSize="19sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>